<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/linear"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="4dp"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">
        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/room_name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/electrician_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_name"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3">
                <TextView
                    android:id="@+id/hostelName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hostel_name"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/roomDetailsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room_name"
                    android:textColor="#000"/>

                <TextView
                    android:id="@+id/complaintDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_name"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/complaintDetailsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/complaint_name"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/electricianName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/electrician_name"
                    android:textColor="#000"/>
                <TextView
                    android:id="@+id/otpName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/otp_name"
                    android:textColor="#000"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/l1"
            android:layout_alignParentEnd="true">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_name"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="#000"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/check1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:buttonTint="@color/colorPrimary"/>
                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:buttonTint="@color/colorPrimary"/>
                <CheckBox
                    android:id="@+id/check3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:buttonTint="@color/colorPrimary"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>



</android.support.v7.widget.CardView>